fix text align on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -1433,6 +1433,7 @@ input:focus:-ms-input-placeholder { color:transparent;  } /* IE 10+ */
     letter-spacing: 1px;
     line-height: 45px;
     margin: 15px 0;
+    text-align: center;
   }
 
   .who-we-are-welcome {
